--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Tatka751.github.io/HW16/",
+  "homepage": "http://Tatka751.github.io/React16",
   "name": "hw16",
   "version": "0.1.0",
   "private": true,
